Implementation of the first services